--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -52,9 +52,8 @@
                 </form>
 
                 <div class="table-container">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered m-1 mb-5" style="background-color: white;">
                     <thead>
-                        
                         <th class="title" scope="col">#</th>
                         <th class="title" scope="col">Nombre del servicio o gasto</th>
                         <th class="title" scope="col">Fecha de pago</th>
