--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -24,7 +24,7 @@
                 <div class="card p-3" style="width: 18rem; border-radius: 1em;">
                     <a class="link-home" href="{{ url_for('alta') }}">
                         <h5 class="card-title " >Nuevo alumno</h5>
-                        <img src="static/img/Matricula.jpeg" class="card-img-top" alt="..."> 
+                        <img src="static/img/Matricula.png" class="card-img-top" alt="..."> 
                     </a>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <div class="card p-3" style="width: 18rem; border-radius: 1em;">
                     <a class="link-home" href="{{ url_for('ingresos') }}">
                         <h5 class="card-title">Ingresos</h5>
-                        <img src="static/img/ingresos.jpeg" class="card-img-top" alt="...">  
+                        <img src="static/img/ingresos.png" class="card-img-top" alt="...">  
                     </a>   
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 <div  class="card p-3" style="width: 18rem; border-radius: 1em;">
                     <a class="link-home" href="{{ url_for('egresos') }}">
                         <h5 class="card-title">Egresos</h5>
-                        <img src="static/img/egresos.jpeg" class="card-img-top" alt="...">     
+                        <img src="static/img/egresos.png" class="card-img-top" alt="...">     
                     </a>
                 </div>
             </div>
