--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -10,6 +10,9 @@ body {
 
 
 
+
+
+
 /*Log In*/
 .top-bar{
   height:4em; 
@@ -126,6 +129,7 @@ body {
 }
 
 
+
 .table-container {
   overflow-x: auto;
   max-width: 100%; /* Esto asegura que el contenedor no sea más ancho que la pantalla */
@@ -143,6 +147,7 @@ body {
   cursor: pointer;
 }
 .col-tabla{
+  width: 6%;
   font-weight: 500;
   text-align: center;
 }
