--- a/src/templates/inicio.html
+++ b/src/templates/inicio.html
@@ -44,6 +44,14 @@
                     </a>
                 </div>
             </div>
+            <div class="col">
+                <div  class="card p-3" style="width: 18rem; border-radius: 1em;">
+                    <a class="link-home" href="{{ url_for('resumen') }}">
+                        <h5 class="card-title">Resumen</h5>
+                        <img src="static/img/egresos.png" class="card-img-top" alt="...">     
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
