--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -161,11 +161,24 @@ body {
   font-weight: 500;
   text-align: center;
 }
-.btn-guardar{
+.btn-guardar {
   background-color: #FBD374;
   color: white;
-  border:none;
+  border: none;
   border-radius: 1em;
   padding: 0.5em;
   font-weight: 400;
+}
+
+/* Estilo para el texto "Opcional" */
+.optional-text {
+  color: gray; /* Texto en gris */
+  font-size: 14px; /* Tamaño de fuente opcional */
+  margin-left: 5px; /* Espacio a la izquierda del campo */
+}
+
+.btn-container {
+  background-color: white;
+  padding: 1em; /* Ajusta el espaciado interior según sea necesario */
+  text-align: center; /* Centra horizontalmente el botón */
 }
