--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -4,60 +4,91 @@
 </head>
 <body>
     {% block content %}
-    
     <div class="row">
-        
         <div class="col-md-10 container">
-        <p class="text-left"> Egresos</p>
-        <div class="card"> 
-            <div class = "card-body">
-                <form action="{{ url_for('egresos')}}" method="POST">
-                    <div class="row mb-3">
-                        <div class="col-md-3">
-                            <label >Nombre del servicio o gasto <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="servicios"required value="{{ form_data.servicios if form_data else '' }}">
-                        </div>
-                        <div class="col-md-3">
-                            <label >Fecha de pago <span class="campo-obligatorio">*</span></label>
-                            <input type="date" class="form-control mb-3" name="fecha_pago"required value="{{ form_data.fecha_pago if form_data else '' }}">
-                        </div>
-                        <div class="col-md-3">
-                            <label >Monto <span class="campo-obligatorio">*</span></label>
-                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" required value="{{ form_data.monto if form_data else '' }}">
-                        </div>
-                        <div class="col-md-3">
-                            <label class="label-with-arrow">
-                                Medios de pago <span class="campo-obligatorio">*</span>
-                                <div class="select-container">
-                                    <select class="form-control mb-3" name="medios_de_pago" required value="{{ form_data.medios_de_pago if form_data else '' }}">
-                                        <option value="Efectivo" {% if data.medios_de_pago == 'Efectivo' %}selected{% endif %}>Efectivo</option>
-                                        <option value="Mercado pago" {% if data.medios_de_pago == 'Mercado pago' %}selected{% endif %}>Mercado pago</option>
-                                        <option value="Cuenta DNI" {% if data.medios_de_pago == 'Cuenta DNI' %}selected{% endif %}>Cuenta DNI</option>
-                                    </select>         
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
-                                        <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
-                                    </svg>
+            <p class="text-left"> Egresos</p>
+            <div class="card"> 
+                <div class="card-body">
+                    <form action="{{ url_for('egresos')}}" method="POST">
+                        <div class="row mb-3">
+                            <div class="col-md-3">
+                                <label >Nombre del servicio o gasto <span class="campo-obligatorio">*</span></label>
+                                <input type="text" class="form-control mb-3" name="servicios" required value="{{ form_data.servicios if form_data else '' }}">
+                            </div>
+                            <div class="col-md-3">
+                                <label >Fecha de pago <span class="campo-obligatorio">*</span></label>
+                                <input type="date" class="form-control mb-3" name="fecha_pago" required value="{{ form_data.fecha_pago if form_data else '' }}">
+                            </div>
+                            <div class="col-md-3">
+                                <label>Monto <span class="campo-obligatorio">*</span></label>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text">$</span>
+                                    <input type="text" class="form-control" name="monto" placeholder="0.00" required
+                                           value="{{ form_data.monto if form_data else '' }}" id="montoInput">
                                 </div>
-                            </label>
+                            </div>
+                            <script>
+                            // Obtener el campo de entrada por su ID
+                            var montoInput = document.getElementById('montoInput');
+                            
+                            // Agregar un manejador de eventos para el evento 'input'
+                            montoInput.addEventListener('input', function() {
+                                // Obtener la posición actual del cursor
+                                var cursorPosition = montoInput.selectionStart;
+                              
+                                // Obtener el valor actual del campo
+                                var valor = montoInput.value;
+                                
+                                // Quitar cualquier carácter que no sea un número o punto
+                                valor = valor.replace(/[^0-9.]/g, '');
+                                
+                                // Formatear el valor con dos decimales
+                                valor = parseFloat(valor).toFixed(2);
+                                
+                                // Agregar separadores de miles y el signo de dólar
+                                valor = '$' + valor.replace(/\d(?=(\d{3})+\.)/g, '$&,');
+                                
+                                // Asignar el valor formateado de nuevo al campo
+                                montoInput.value = valor;
+                                
+                                // Restaurar la posición del cursor después del formato
+                                var newPos = cursorPosition + (valor.length - montoInput.value.length);
+                                montoInput.setSelectionRange(newPos, newPos);
+                            });
+                            </script> 
+                            <div class="col-md-3">
+                                <label class="label-with-arrow">
+                                    Medios de pago <span class="campo-obligatorio">*</span>
+                                    <div class="select-container">
+                                        <select class="form-control mb-3" name="medios_de_pago" required value="{{ form_data.medios_de_pago if form_data else '' }}">
+                                            <option value="Efectivo" {% if data.medios_de_pago == 'Efectivo' %}selected{% endif %}>Efectivo</option>
+                                            <option value="Mercado pago" {% if data.medios_de_pago == 'Mercado pago' %}selected{% endif %}>Mercado pago</option>
+                                            <option value="Cuenta DNI" {% if data.medios_de_pago == 'Cuenta DNI' %}selected{% endif %}>Cuenta DNI</option>
+                                        </select>         
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                                            <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                                        </svg>
+                                    </div>
+                                </label>
+                            </div>
+                            <div class="col-md-3 text-center">
+                                <div class="btn-container">
+                                    <button type="submit" class="btn-guardar">Guardar</button>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-3">
-                            <button class="btn-guardar mb-3 mt-4" type="submit">Guardar</button>
-                        </div>
+                    </form>
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                    <div class="alert alert-danger" role="alert">
+                        {% for category, message in messages %}
+                        {{ message }}
+                        {% endfor %}
                     </div>
-                </div>
-                {% with messages = get_flashed_messages(with_categories=true) %}
-                {% if messages %}
-                <div class="alert alert-danger" role="alert">
-                    {% for category, message in messages %}
-                    {{ message }}
-                    {% endfor %}
-                </div>
-                {% endif %}
-                {% endwith %}
-                </div>
+                    {% endif %}
+                    {% endwith %}
                     <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
-                </form>
-
+                </div>
                 <div class="table-container">
                     <table class="table table-bordered m-1 mb-5" style="background-color: white;">
                     <thead>
@@ -66,8 +97,7 @@
                         <th class="title" scope="col">Fecha de pago</th>
                         <th class="title" scope="col">Monto</th>
                         <th class="title" scope="col">Medio de pago</th>
-                        <th class="title" scope="col"colspan="2">Acciones</th>
-
+                        <th class="title" scope="col" colspan="2">Acciones</th>
                     </thead>
                 </div>
                     <tbody>
@@ -75,14 +105,12 @@
                         <tr>
                             <td>{{ d.id }}</td>
                             <td>{{ d.servicios }}</td>
-                            <td>{{ d.fecha_pago }}</td>
-                            <td>{{ d.monto }}</td>
+                            <td>{{ d.fecha_pago.strftime('%d/%m/%Y') }}</td>
+                            <td>${{ '{:,.2f}'.format(d.monto) }}</td>
                             <td>{{ d.medios_de_pago }}</td>
                             <td class="text-center "> <i class="btn-operacion bi bi-pencil-square " id="btn-editar{{ d.id }}" data-bs-toggle="modal" data-bs-target="#modal{{ d.id }}"></i></td>
                             <td class="text-center"> <a href="{{ url_for('eliminar_egresos', id=d.id) }}" ><i class="btn-operacion bi bi-trash"></i></a></td>
-                          
                         </tr>
-
                         <!-- MODAL -->
                         <div class="modal fade" id="modal{{ d.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
@@ -95,11 +123,46 @@
                                         <form action="{{ url_for('editaregresos', id=d.id) }}" method="POST">
                                             <input type="hidden" name="id" value="{{ d.id }}">
                                             <label>Nombre del servicio <span class="campo-obligatorio">*</span></label>
-                                            <input type="text" class="form-control mb-3" name="servicios" value="{{ d.servicios}}"required value="{{ form_data.servicios if form_data else '' }}">
+                                            <input type="text" class="form-control mb-3" name="servicios" value="{{ d.servicios }}" required value="{{ form_data.servicios if form_data else '' }}">
                                             <label>Fecha de pago <span class="campo-obligatorio">*</span></label>
-                                            <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}"required value="{{ form_data.fecha_pago if form_data else '' }}">
-                                            <label>Monto <span class="campo-obligatorio">*</span></label>
-                                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" value="{{ d.monto }}" required value="{{ form_data.monto if form_data else '' }}">
+                                            <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}" required value="{{ form_data.fecha_pago if form_data else '' }}">
+                                            <div class="col-md-3">
+                                                <label>Monto <span class="campo-obligatorio">*</span></label>
+                                                <div class="input-group mb-3">
+                                                    <span class="input-group-text">$</span>
+                                                    <input type="text" class="form-control" name="monto" placeholder="0.00" required
+                                                           value="{{ form_data.monto if form_data else '' }}" id="montoInput">
+                                                </div>
+                                            </div>
+                                            <script>
+                                            // Obtener el campo de entrada por su ID
+                                            var montoInput = document.getElementById('montoInput');
+                                            
+                                            // Agregar un manejador de eventos para el evento 'input'
+                                            montoInput.addEventListener('input', function() {
+                                                // Obtener la posición actual del cursor
+                                                var cursorPosition = montoInput.selectionStart;
+                                              
+                                                // Obtener el valor actual del campo
+                                                var valor = montoInput.value;
+                                                
+                                                // Quitar cualquier carácter que no sea un número o punto
+                                                valor = valor.replace(/[^0-9.]/g, '');
+                                                
+                                                // Formatear el valor con dos decimales
+                                                valor = parseFloat(valor).toFixed(2);
+                                                
+                                                // Agregar separadores de miles y el signo de dólar
+                                                valor = '$' + valor.replace(/\d(?=(\d{3})+\.)/g, '$&,');
+                                                
+                                                // Asignar el valor formateado de nuevo al campo
+                                                montoInput.value = valor;
+                                                
+                                                // Restaurar la posición del cursor después del formato
+                                                var newPos = cursorPosition + (valor.length - montoInput.value.length);
+                                                montoInput.setSelectionRange(newPos, newPos);
+                                            });
+                                            </script> 
                                             <div class="col-md-3">
                                                 <label>Medios de pago <span class="campo-obligatorio">*</span></label>
                                                 <select class="form-control mb-3 custom-select" name="medios_de_pago" required>
@@ -107,20 +170,23 @@
                                                         <option value="{{ option }}" {% if d.medios_de_pago == option %}selected{% endif %}>{{ option }}</option>
                                                     {% endfor %}
                                                 </select>
-                                            <div class="modal-footer">
-                                                <button type="submit" class="btn-guardar">Guardar cambios</button>
+                                                <div class="col-md-3 text-center">
+                                                    <div class="btn-container">
+                                                        <button type="submit" class="btn-guardar">Guardar cambios</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
                                     </div>
-                                </form>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                {% endfor %}
-            </tbody>
-        </table>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-</div>
-</div>
-</div>
-{% endblock %}
+    {% endblock %}
 </body>
+        
