--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -104,7 +104,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <label >Horario <span class="campo-obligatorio">*</span></label>
-                                    <input type="time" id="horario" name="horario"required value="{{ form_data.horario if form_data else '' }}">
+                                    <input class="form-control mb-3" type="time" id="horario" name="horario"required value="{{ form_data.horario if form_data else '' }}">
                                 </div>
                                 <div class="col-md-3">
                                     <label class="label-with-arrow">
@@ -119,13 +119,13 @@
                                                 <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
                                             </svg>
                                         </div>
-                                    </label>
-                                    <div class="col-md-3 text-center">
-                                        <div class="btn-container">
-                                            <button type="submit" class="btn-guardar">Guardar alumno</button>
-                                        <div>
-                                    </div>
-                            </div>
+                                    </label>                            
+                                </div>
+                                <div class="text-center">
+                                    <div class="btn-container">
+                                        <button type="submit" class="btn-guardar">Guardar alumno</button>
+                                    <div>
+                                </div>
               
                         {% with messages = get_flashed_messages(with_categories=true) %}
                         {% if messages %}
@@ -136,13 +136,13 @@
                         </div>
                         {% endif %}
                         {% endwith %}
-                            <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
+
                         </form>
                     </div>
                 </div>
                 
-                    <div class="table-container">
-                        <table class="table table-bordered m-1 mb-5" style="background-color: white;">
+                    <div class="table-responsive table-conteiner">
+                        <table data-bs-spy="scroll" class="table table-bordered m-1 mb-5" style="background-color: white;">
                         <thead>
                         <th scope="col"></th>
                         <th scope="col" class="col-tabla">Nombre</th>
@@ -185,7 +185,29 @@
                                         <td>{{d.horario}}</td>
                                         <td>{{d.materia}}</td>
                                         <td class="text-center "> <i class="btn-operacion bi bi-pencil-square "  id="btn-editar{{d.id}}" data-bs-toggle="modal" data-bs-target="#modal{{d.id}}" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar"></i></td>
-                                        <td class="text-center"> <a href="{{url_for('eliminar', id=d.id)}}" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar"><i class="btn-operacion bi bi-trash"></i></a></td>
+                                        <td class="text-center"> 
+                                            <a href="#" data-bs-toggle="modal" data-bs-target="#confirmarEliminar{{d.id}}" data-bs-placement="top" title="Eliminar">
+                                                <i class="btn-operacion bi bi-trash"></i>
+                                            </a>
+                                        </td>
+                                        <!-- Modal de confirmación de eliminación para cada alumno -->
+                                        <div class="modal fade" id="confirmarEliminar{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Confirmar eliminación</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        ¿Estás seguro de eliminar al alumno {{d.nombre}} {{d.apellido}}?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn-guardar" style="background-color: #92BD89; color: #ffff;" data-bs-dismiss="modal">Cancelar</button>
+                                                        <a href="{{url_for('eliminar', id=d.id)}}" class="btn-guardar">Eliminar</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </tr>
 
                                     <!--MODAL -->
@@ -199,77 +221,77 @@
                                                     <div class="modal-body">
                                                         <form action="/editar/{{d.id}}" method="POST">  
                                                             <div class="row">
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Nombre <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="nombre" value="{{d.nombre}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Apellido <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="apellido" value="{{d.apellido}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Email <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="email" value="{{d.email}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Telefono <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="telefono" value="{{d.telefono}}"required>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
                                                                     <input type="date" class="form-control mb-3" name="fecha_nacimiento" value="{{d.fecha_nacimiento}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Fecha de inicio <span class="campo-obligatorio">*</span></label>
                                                                     <input type="date" class="form-control mb-3" name="fecha_inicio" value="{{d.fecha_inicio}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Colegio <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="colegio" value="{{d.colegio}}"required>
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Curso <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="curso" value="{{d.curso}}"required>
                                                                 </div>
                                                             </div>
                                                             <div class="row">
-                                                                <div class="col-3">
+                                                                <div class="col-md-3">
                                                                     <label >Nivel educativo <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="nivel_educativo" value="{{d.nivel_educativo}}"required>
                                                                 </div>
-                                                                <div class="col-3">
+                                                                <div class="col-md-3">
                                                                     <label >Nombre tutor <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="nombre_titular" value="{{d.nombre_titular}}"required>
                                                                 </div>
-                                                                <div class="col-3">
+                                                                <div class="col-md-3">
                                                                     <label >Telefono tutor <span class="campo-obligatorio">*</span></label>
-                                                                    <input type="text" class="form-control mb-3" name="telefono_titular" value="{{d.telefono_titular}}"required>
+                                                                    <input type="tel" class="form-control mb-3" name="telefono_titular" value="{{d.telefono_titular}}"required>
                                                                 </div>   
                                                                 <div class="col-md-3">
                                                                     <label >Nombre tutor<span class="optional-text">(Opcional)</span></label>
                                                                     <input type="text" class="form-control mb-3" name="nombre_titular1" value="{{ form_data.nombre_titular1 if form_data else '' }}">
-                                                                </div>
+                                                                </div>                                                              
+                                                            </div>
+                                                            <div class="row">
                                                                 <div class="col-md-3">
                                                                     <label >Telefono tutor<span class="optional-text">(Opcional)</span></label>
-                                                                    <input type="number" class="form-control mb-3" name="telefono_titular1" value="{{ form_data.telefono_titular1 if form_data else '' }}">
+                                                                    <input type="tel" class="form-control mb-3" name="telefono_titular1" value="{{ form_data.telefono_titular1 if form_data else '' }}">
                                                                 </div>
-                                                                <div class="col-3"> 
+                                                                <div class="col-md-3"> 
                                                                     <label >Dia <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="dia" value="{{d.dia}}"required>
                                                                 </div>   
-                                                            </div>
-                                                            <div class="row">
-                                                                <div class="col-3">
+                                                                <div class="col-md-3">
                                                                     <label >Horario <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="horario" value="{{d.horario}}"required>
                                                                 </div>
-                                                                <div class="col-3">
+                                                                <div class="col-md-3">
                                                                     <label >Materia <span class="campo-obligatorio">*</span></label>
                                                                     <input type="text" class="form-control mb-3" name="materia" value="{{d.materia}}"required>
                                                                 </div>
-                                                                <div class="col-md-3 text-center">
+                                                                <div class="col text-center">
                                                                     <div class="btn-container">
                                                                         <button type="submit" class="btn-guardar">Guardar cambios</button>
                                                                     <div>
@@ -288,4 +310,6 @@
                     </table>
               </div>                   
 {% endblock %}
+
+
 
